--- a/api/package.json
+++ b/api/package.json
@@ -16,11 +16,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "heroku": "^7.56.0",
     "ioredis": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
+    "snap": "^1.1.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
